@@ -25,7 +25,8 @@
         <module>hw06-ATM</module>
         <module>hw07-ATMDepartment</module>
         <module>hw08-JsonObjectWriter</module>
-        <module>hw09-SelfMadeORM</module>
+        <!--module>hw09-SelfMadeORM</module-->
+        <module>hw10-Hibernate</module>
     </modules>
 
     <dependencies>
@@ -68,6 +69,48 @@
             <version>${com.google.code.gson.verrsion}</version>
         </dependency>
         <!--endregion-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit.platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${junit.platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>${junit.platform.surefire.provider.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -82,7 +125,9 @@
         <!--jmh-core.version>1.21</jmh-core.version-->
         <!--mockito-all.version>2.0.2-beta</mockito-all.version-->
         <mockito.version>3.0.0</mockito.version>
-        <junit.jupiter.version>5.5.0</junit.jupiter.version>
+        <junit.jupiter.version>5.6.0-M1</junit.jupiter.version>
+        <junit.platform.version>1.6.0-M1</junit.platform.version>
+        <junit.platform.surefire.provider.version>1.3.2</junit.platform.surefire.provider.version>
         <assertj.version>3.12.2</assertj.version>
         <!--endregion-->
 
@@ -90,6 +135,7 @@
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <maven.compiler.release>${java.version}</maven.compiler.release>
+        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
         <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
         <maven-assembly-plugin.descriptorSuffix>jar-with-dependencies</maven-assembly-plugin.descriptorSuffix>
         <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
@@ -102,6 +148,8 @@
         <com.google.code.gson.verrsion>2.8.5</com.google.code.gson.verrsion>
         <com.google.guava.version>28.0-jre</com.google.guava.version>
         <javassist.vesrsion>3.25.0-GA</javassist.vesrsion>
+        <h2database.version>1.4.200</h2database.version>
+        <hibernate-core.version>5.4.7.Final</hibernate-core.version>
         <!--endregion-->
     </properties>
 
@@ -151,6 +199,17 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok-maven-plugin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2database.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-core.version}</version>
+            </dependency>
             </dependency>          
             <!--region JSON-P-->
             <dependency>
@@ -171,7 +230,6 @@
                 <version>{h2database.version}</version>
             </dependency>
             <!--endregion-->
-
         </dependencies>
     </dependencyManagement>
 
@@ -208,6 +266,32 @@
                         <source>1.8</source>
                         <target>1.8</target>
                     </configuration>
+                </plugin>
+                <!--plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
+                    <configuration-->
+                        <!--argLine>--><!--enable-preview</argLine>
+                    </configuration-->
+                <!--/plugin-->
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
+                    <configuration>
+                    <argLine>--enable-preview</argLine>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.junit.platform</groupId>
+                            <artifactId>junit-platform-surefire-provider</artifactId>
+                            <version>${junit.platform.surefire.provider.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.junit.jupiter</groupId>
+                            <artifactId>junit-jupiter-engine</artifactId>
+                            <version>${junit.jupiter.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <artifactId>maven-shade-plugin</artifactId>
